# vizio_oss

./: README.md
alsa/1.0.24.1/: Makefile  README  alsa-lib-1.0.24.1.daniel.tar.bz2  alsa-utils-1.0.24.2.daniel.tar.bz2  makefile.softlink  rule.mak
alsa/1.0.24.1/ut/: Makefile  pcm_min.c
directfb/: directfb.mak  makefile  sawman.mak
directfb/Config_mt53/: TPV.mak  config.h  directfbrc  makefile  mtk.mak  sawmanrc
directfb/Config_mt53/direct/: build.h
directfb/Config_mt53/fusion/: build.h
directfb/Kernel/: Makefile  README
directfb/Kernel/linux-fusion/: Makefile
directfb/MediaTek/Config/: directfbrc  directfbrc.ceplfapp  directfbrc.clanbomber2  directfbrc.df_andi  directfbrc.df_cpuload  directfbrc.df_fire  directfbrc.df_neo  directfbrc.geki3  directfbrc.gogiopera-dfb-dynamic  directfbrc.sampleOSD  sawmanrc  (+2 more)
directfb/Source/SaWMan/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
directfb/Source/SaWMan/include/: Makefile.am  Makefile.in
directfb/Source/SaWMan/rules/: flux_comp.make
directfb/Source/SaWMan/samples/: Makefile.in
directfb/Source/SaWMan/src/: Makefile.am  Makefile.in  SaWMan.cpp  SaWMan.h  SaWManManager.cpp  SaWManManager.h  SaWManProcess.cpp  SaWManProcess.h  SaWMan_real.cpp  sawman.c  sawman_config.c  sawman_config.h  sawman_draw.c  sawman_internal.h  sawman_updates.c  sawman_updates.h  sawman_window.c
directfb/Source/SaWMan/tools/: Makefile.am  Makefile.in
directfb/Source/SaWMan/wm/: Makefile.am  Makefile.in
directfb/Source/SaWMan/wm/sawman/: Makefile.in  sawman_wm.c
e2fsprogs/: Makefile
gawk/: gawk-3.1.5.tar.bz2
grep/: grep-2.5.1a.tar.bz2
gzip/gzip-1.3.12_patch/: gzip.c
kernel_config/: .config
libiconv/: Makefile
linux-3.0/: Makefile
linux-3.0/block/: blk-core.c  elevator.c
linux-3.0/crypto/: Kconfig  Makefile  mpuint.c  mpursa.c  mpusha.c  mtk_crypto.c
linux-3.0/drivers/: Kconfig  Makefile
linux-3.0/fs/: Kconfig  Makefile  drop_caches.c  readdir.c
linux-3.0/init/: Kconfig  Makefile  do_mounts.c  do_mounts_dm.c  do_mounts_initrd.c  do_mounts_nfsb.c  do_mounts_rd.c  main.c  nfsb.c
linux-3.0/kernel/: Makefile  cgroup.c  fork.c  module.c  sched.c  signal.c
linux-3.0/lib/: Kconfig.debug  kobject_uevent.c
linux-3.0/mm/: swapfile.c  vmalloc.c
linux-3.0/scripts/: Makefile.build  Makefile.lib  Makefile.modpost  checksyscalls.sh
linux-3.0/sound/: Makefile
linux-3.0/trace32/: debug.cmm  mt5368_a9.cmm  mt5389.cmm  mt5396.cmm  t32mpcore.cmm
liveMedia/: Makefile  config.armlinux  config.linux
liveMedia/BasicUsageEnvironment/: DelayQueue.cpp  Makefile
liveMedia/UsageEnvironment/: Makefile
liveMedia/groupsock/: GroupsockHelper.cpp  Makefile
liveMedia/liveMedia/: BasicUDPSource.cpp  MP3StreamState.cpp  MPEG2TransportStreamFramer.cpp  Makefile  MediaSession.cpp  RTSPClient.cpp  RTSPClient.cpp.bak
liveMedia/mediaServer/: Makefile
liveMedia/testProgs/: Makefile
net-tools/: net-tools-1.60-install.tar.bz2
net-tools/net-tools-1.60_patch/: Makefile
psmisc/: mtk_default.txt
sysvinit-2.86/: COPYRIGHT
sysvinit-2.86/doc/: Changelog  sysvinit-2.85.lsm
sysvinit-2.86/man/: bootlogd.8  bootlogd.8.todo  init.8  initscript.5  killall5.8  last.1  mesg.1  mountpoint.1  pidof.8  runlevel.8  shutdown.8  sulogin.8  wall.1
sysvinit-2.86/obsolete/: powerd.8  powerd.c  utmpdump.c.OLD
sysvinit-2.86/src/: Makefile  bootlogd.c  dowall.c  halt.c  hddown.c  ifdown.c  init.c  init.h  killall5.c  last.c  mesg.c  mountpoint.c  oldutmp.h  paths.h  reboot.h  runlevel.c  set.h  shutdown.c  sulogin.c  utmp.c  utmpdump.c  wall.c
uboot/: Makefile  config.mak  mtkloader.mak  symlink.mak
uboot/pack/: Makefile  mt5365_nor.sc  mt5396_nor.sc
uboot/secure/: Makefile  mt5365_secure_nor.sc  mt5396_secure_nor.sc
uboot/t32/: preloader_5360.cmm  preloader_5391.cmm  preloader_5391_1.1.4.cmm  prj_uboot.cmm  uboot_5360.cmm  uboot_5365.cmm  uboot_5368.cmm  uboot_5389.cmm  uboot_5391.cmm  uboot_5391_1.1.4.cmm  uboot_5395.cmm  uboot_5396.cmm  uboot_5398.cmm  uboot_5880.cmm
uboot/u-boot-2011.12/: Makefile  boards.cfg  config.mk  rules.mk
udhcp/: udhcp-install.tar.bz2
udhcp/v0.0_patch/: Makefile
wireless_tools.29/: Android.mk  Makefile
(+1376 files in other folders)
